active learning notebook update and start fastapi implementation

--- a/EmotionAnalysis/active_learning_emotion_roberta_model.ipynb
+++ b/EmotionAnalysis/active_learning_emotion_roberta_model.ipynb
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "qF_UGEOpPrDb"
       },
@@ -25,28 +25,25 @@
       "source": [
         "import transformers\n",
         "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import precision_recall_fscore_support\n",
         "import pandas as pd\n",
         "import torch\n",
         "from tqdm import tqdm\n",
         "from torch.utils.data import Dataset, DataLoader\n",
         "from datasets import load_dataset\n",
         "from transformers import TrainingArguments, Trainer, AutoModelForSequenceClassification\n",
-        "from transformers import AutoTokenizer"
+        "from transformers import AutoTokenizer\n",
+        "import regex as re\n",
+        "from collections import defaultdict\n",
+        "from IPython.display import display, HTML, clear_output\n",
+        "from matplotlib import pyplot as plt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "cuda\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Setting up the device for GPU usage\n",
         "\n",
@@ -69,13 +66,13 @@
       "source": [
         "# Define the mapping from emotion names to numbers\n",
         "emotion_mapping = {\n",
-        "    'admiration': 1, 'amusement': 2, 'anger': 3, 'annoyance': 4,\n",
-        "    'approval': 5, 'caring': 6, 'confusion': 7, 'curiosity': 8,\n",
-        "    'desire': 9, 'disappointment': 10, 'disapproval': 11, 'disgust': 12,\n",
-        "    'embarrassment': 13, 'excitement': 14, 'fear': 15, 'gratitude': 16,\n",
-        "    'grief': 17, 'joy': 18, 'love': 19, 'nervousness': 20, 'optimism': 21,\n",
-        "    'pride': 22, 'realization': 23, 'relief': 24, 'remorse': 25, 'sadness': 26,\n",
-        "    'surprise': 27, 'neutral': 28\n",
+        "    'admiration': 0, 'amusement': 1, 'anger': 2, 'annoyance': 3,\n",
+        "    'approval': 4, 'caring': 5, 'confusion': 6, 'curiosity': 7,\n",
+        "    'desire': 8, 'disappointment': 9, 'disapproval': 10, 'disgust': 11,\n",
+        "    'embarrassment': 12, 'excitement': 13, 'fear': 14, 'gratitude': 15,\n",
+        "    'grief': 16, 'joy': 17, 'love': 18, 'nervousness': 19, 'optimism': 20,\n",
+        "    'pride': 21, 'realization': 22, 'relief': 23, 'remorse': 24, 'sadness': 25,\n",
+        "    'surprise': 26, 'neutral': 27\n",
         "}\n",
         "\n",
         "def process_csv(file_path):\n",
@@ -102,7 +99,10 @@
         "\n",
         "    return new_df\n",
         "\n",
-        "initial_labeled_data = process_csv('active_learning_emotions.csv')"
+        "initial_labeled_data = process_csv('active_learning_emotions.csv')\n",
+        "\n",
+        "# Split into training and testing sets\n",
+        "train_df, test_df = train_test_split(initial_labeled_data, test_size=0.2, random_state=42)"
       ]
     },
     {
@@ -111,8 +111,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "initial_labeled_data.shape\n",
-        "print(initial_labeled_data)"
+        "# Print shapes to verify the split\n",
+        "print(\"Training Data Shape:\", train_df.shape)\n",
+        "print(\"Testing Data Shape:\", test_df.shape)\n",
+        "\n",
+        "print(f\"Train DF: {train_df}\")\n",
+        "print(f\"Test DF: {test_df}\")"
       ]
     },
     {
@@ -133,8 +137,58 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exploratory Data Analysis suggests some cleaning strategies:\n",
+        "\n",
+        "- Lowercase all text\n",
+        "- Remove URLs\n",
+        "- Remove all LaTeX mathematical expressions and asymptote code blocks. They may convey useful information, but for now, we don’t want to be too advanced.\n",
+        "- Remove erroneous LaTeX syntax and stopwords\n",
+        "- Handle filters and non-alphanumeric characters\n",
+        "- Stemming"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def preprocess_data(x):\n",
+        "    # lowercase all\n",
+        "    # if lower:\n",
+        "    #     x = x.lower()\n",
+        "    \n",
+        "    x = re.sub(r'http\\S+', '', x)               # remove URLs\n",
+        "    x = x.replace('$$$', '$$ $')                # separate triple dollars\n",
+        "    x = x.replace('\\n', ' ')                    # remove new lines\n",
+        "    # x = re.sub(equation_pattern, '', x)         # remove math expressions\n",
+        "    # x = re.sub(asymptote_pattern, '', x)        # remove asymptote\n",
+        "    \n",
+        "    # remove erroneous LaTeX syntax and stopwords\n",
+        "    x = x.replace('\\\\', ' \\\\')\n",
+        "    # temp = []\n",
+        "    # for word in x.split():\n",
+        "    #     if not word.startswith('\\\\') and not word in stopwords:\n",
+        "    #         temp.append(word)\n",
+        "    # x = ' '.join(temp)\n",
+        "    \n",
+        "    x = re.sub(r'([-;.,!?<=>])', r' \\1 ', x)    # separate filters from words\n",
+        "    x = re.sub('[^A-Za-z0-9]+', ' ', x)         # remove non-alphanumeric chars\n",
+        "    \n",
+        "    # stemming\n",
+        "    # if stem:\n",
+        "    #     x = ' '.join(porter.stem(word) for word in x.split())\n",
+        "    return x\n",
+        "\n",
+        "X_unlabeled['text'] = X_unlabeled['text'].apply(preprocess_data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -153,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "YGJs43LlAyby"
       },
@@ -209,19 +263,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_data = initial_labeled_data.reset_index(drop=True)\n",
-        "test_data = X_unlabeled.reset_index(drop=True)\n",
+        "train_data = train_df.reset_index(drop=True)\n",
+        "test_data = test_df.reset_index(drop=True)\n",
+        "pool_data = X_unlabeled.reset_index(drop=True)\n",
         "training_set = SentimentData(train_data, tokenizer, MAX_LEN)\n",
-        "testing_set = SentimentData(test_data[:100], tokenizer, MAX_LEN)"
+        "testing_set = SentimentData(test_data, tokenizer, MAX_LEN)\n",
+        "pool_set = SentimentData(pool_data[:100], tokenizer, MAX_LEN)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -236,12 +292,13 @@
         "                }\n",
         "\n",
         "training_loader = DataLoader(training_set, **train_params)\n",
-        "testing_loader = DataLoader(testing_set, **test_params)"
+        "testing_loader = DataLoader(testing_set, **test_params)\n",
+        "pool_loader = DataLoader(pool_set, **test_params)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -251,7 +308,7 @@
         "        self.l1 = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
         "        self.pre_classifier = torch.nn.Linear(768, 768)\n",
         "        self.dropout = torch.nn.Dropout(0.3)\n",
-        "        self.classifier = torch.nn.Linear(768, 29)\n",
+        "        self.classifier = torch.nn.Linear(768, 28)\n",
         "\n",
         "    def forward(self, input_ids, attention_mask, token_type_ids):\n",
         "        output_1 = self.l1(input_ids=input_ids, attention_mask=attention_mask, token_type_ids=token_type_ids)\n",
@@ -284,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -295,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -306,19 +363,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Defining the training function on the 80% of the dataset for tuning the distilbert model\n",
         "\n",
-        "def train(epoch):\n",
+        "def train(epoch, train_loader):\n",
         "    tr_loss = 0\n",
         "    n_correct = 0\n",
         "    nb_tr_steps = 0\n",
         "    nb_tr_examples = 0\n",
         "    model.train()\n",
-        "    for _,data in tqdm(enumerate(training_loader, 0)):\n",
+        "    for _,data in tqdm(enumerate(train_loader, 0)):\n",
         "        ids = data['ids'].to(device, dtype = torch.long)\n",
         "        mask = data['mask'].to(device, dtype = torch.long)\n",
         "        token_type_ids = data['token_type_ids'].to(device, dtype = torch.long)\n",
@@ -355,20 +412,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
+        "def print_wrapped(text):\n",
+        "    display(HTML(f\"<pre style='word-break: break-word; white-space: pre-wrap;'>{text}</pre>\"))\n",
+        "\n",
         "def get_new_labels_from_human(unlabeled_examples):\n",
         "    new_labels = []\n",
         "\n",
-        "    print(\"EMOTIONS:\", [*emotion_mapping])\n",
         "    for example in unlabeled_examples[\"text\"]:\n",
-        "        print(\"Text:\", example)\n",
-        "        label_choice = input(\"Text: {}: \".format(example))\n",
+        "        print(\"EMOTIONS:\", [*emotion_mapping])\n",
+        "        print_wrapped(\"Text: \" + example)\n",
+        "        label_choice = input()\n",
         "        while label_choice not in [*emotion_mapping]:\n",
         "            print(\"Invalid input. Please enter one of the valid choices.\")\n",
-        "            label_choice = input(\"Text: {}: \".format(example))\n",
+        "            label_choice = input()\n",
         "        new_labels.append(label_choice)\n",
         "\n",
         "    return new_labels\n"
@@ -376,16 +436,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def least_confidence_sampling(model, testing_loader, query_size):\n",
+        "def least_confidence_sampling(model, pool_loader, threshold):\n",
         "    model.eval()\n",
         "    all_confidences = torch.tensor([], device=device)  # Initialize an empty tensor\n",
+        "    #query_idx = []  # Initialize an empty list for indices\n",
         "\n",
         "    with torch.no_grad():  # Temporarily disable gradient calculations\n",
-        "        for _, data in tqdm(enumerate(testing_loader, 0)):\n",
+        "        for _, data in tqdm(enumerate(pool_loader, 0)):\n",
         "            ids = data['ids'].to(device, dtype = torch.long)\n",
         "            mask = data['mask'].to(device, dtype = torch.long)\n",
         "            token_type_ids = data['token_type_ids'].to(device, dtype=torch.long)\n",
@@ -394,7 +455,8 @@
         "            confidence = torch.max(outputs.softmax(dim=1), dim=1)[0]  # Extract confidence score\n",
         "            all_confidences = torch.cat((all_confidences, confidence), dim=0)  # Concatenate to tensor\n",
         "\n",
-        "    query_idx = torch.argsort(all_confidences)[:query_size]  # Select indices of 'query_size' least confident examples           \n",
+        "    query_idx = torch.where(all_confidences < threshold)[0]  # Select indices of 'query_size' least confident examples       \n",
+        "\n",
         "    return query_idx"
       ]
     },
@@ -404,31 +466,122 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "EPOCHS = 2\n",
-        "query_size = 1  # number of instances to query per iteration\n",
+        "def calc_score(model, testing_loader):\n",
+        "    model.eval()\n",
+        "    all_predictions = []  # Initialize an empty list\n",
+        "    y_test = []  # Initialize an empty list to store true labels\n",
         "\n",
-        "for epoch in range(EPOCHS):\n",
-        "    train(epoch)\n",
+        "    with torch.no_grad():\n",
+        "        for _, data in tqdm(enumerate(testing_loader, 0)):\n",
+        "            ids = data['ids'].to(device, dtype = torch.long)\n",
+        "            mask = data['mask'].to(device, dtype = torch.long)\n",
+        "            token_type_ids = data['token_type_ids'].to(device, dtype=torch.long)\n",
+        "\n",
+        "            outputs = model(ids, mask, token_type_ids)\n",
+        "            predictions = outputs.argmax(dim=1).cpu().numpy()  # Get predicted class labels\n",
+        "            all_predictions.extend(predictions)  # Add predictions to the list\n",
+        "            targets = data['targets'].numpy()  # Extract targets and convert to NumPy array\n",
+        "            y_test.extend(targets)  # Append to the list of true labels  \n",
+        "\n",
+        "    metrics = precision_recall_fscore_support(y_test, all_predictions, average='weighted')\n",
+        "    performance = {\n",
+        "        'precision': '{:0.2f}'.format(metrics[0]),\n",
+        "        'recall': '{:0.2f}'.format(metrics[1]),\n",
+        "        'f1': '{:0.2f}'.format(metrics[2])\n",
+        "    }\n",
+        "    return performance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# plot\n",
+        "def graph_plot(iteration, score, scores):\n",
+        "    #clear_output()\n",
+        "    fig, ax = plt.subplots(3, 1, sharex=True, figsize=(10,10))\n",
+        "    fig.suptitle('Active Learning Scores')\n",
+        "    for j, (key, value) in enumerate(score.items()):\n",
+        "        scores[key].append(value)\n",
+        "        ax[j].plot(range(iteration+1), scores[key])\n",
+        "        ax[j].set_title(key)\n",
+        "    plt.xlabel('Number of query')\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "EPOCHS = 2\n",
+        "num_iterations = 3\n",
+        "threshold = 0.3\n",
+        "\n",
+        "scores = {\n",
+        "    'precision': [],\n",
+        "    'recall': [],\n",
+        "    'f1': []  \n",
+        "}\n",
+        "\n",
+        "train_loader = training_loader\n",
+        "\n",
+        "for iteration in range(num_iterations):\n",
+        "    for epoch in range(EPOCHS):\n",
+        "        train(epoch, train_loader)\n",
+        "\n",
+        "    # Calculate score\n",
+        "    score = calc_score(model, testing_loader)\n",
+        "\n",
+        "    # Graph plot\n",
+        "    graph_plot(iteration, score, scores)\n",
         "\n",
         "    # Query strategy: Uncertainty Sampling\n",
-        "    query_idx = least_confidence_sampling(model, testing_loader, query_size) \n",
+        "    query_idx = least_confidence_sampling(model, pool_loader, threshold) \n",
         "\n",
-        "    # Convert to NumPy array and move to CPU\n",
-        "    query_idx_numpy = query_idx.cpu().numpy() \n",
+        "    if len(query_idx) > 0:\n",
+        "        # Convert to NumPy array and move to CPU\n",
+        "        query_idx_numpy = query_idx.cpu().numpy() \n",
         "\n",
-        "    # Get labels from a human annotator for the selected instances\n",
-        "    new_labels = get_new_labels_from_human(test_data.loc[query_idx_numpy])\n",
-        "    print(new_labels)\n",
+        "        # Get labels from a human annotator for the selected instances\n",
+        "        new_labels = get_new_labels_from_human(pool_data.loc[query_idx_numpy])\n",
         "\n",
-        "    # Update datasets (assuming new_labels is a list or array of equal length to query_size)\n",
-        "    train_data = pd.concat([train_data, test_data.iloc[query_idx_numpy]], ignore_index=True)\n",
-        "    test_data = test_data.drop(query_idx_numpy).reset_index(drop=True)\n",
+        "        # Update labels in pool_data\n",
+        "        pool_data.loc[query_idx_numpy, 'emotion'] = [emotion_mapping[label] for label in new_labels]\n",
         "\n",
-        "    # Update DataLoaders\n",
-        "    training_set = SentimentData(train_data, tokenizer, MAX_LEN)\n",
-        "    testing_set = SentimentData(test_data[:100], tokenizer, MAX_LEN)\n",
-        "    training_loader = DataLoader(training_set, **train_params)\n",
-        "    testing_loader = DataLoader(testing_set, **test_params) "
+        "        # Update datasets \n",
+        "        try:\n",
+        "            train_data = pd.concat([train_data, pool_data.iloc[query_idx_numpy]], ignore_index=True)\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error encountered: {e}\")\n",
+        "        pool_data = pool_data.drop(query_idx_numpy).reset_index(drop=True)\n",
+        "        \n",
+        "        # Update DataLoaders\n",
+        "        train_set = SentimentData(train_data, tokenizer, MAX_LEN)\n",
+        "        pool_set = SentimentData(pool_data[:100], tokenizer, MAX_LEN)\n",
+        "        train_loader = DataLoader(train_set, **train_params)\n",
+        "        pool_loader = DataLoader(pool_set, **test_params) "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "output_model_file = 'pytorch_roberta_emotion_email.bin'\n",
+        "output_vocab_file = './'\n",
+        "\n",
+        "model_to_save = model\n",
+        "torch.save(model_to_save, output_model_file)\n",
+        "tokenizer.save_vocabulary(output_vocab_file)\n",
+        "\n",
+        "print('All files saved')\n",
+        "print('This tutorial is completed')"
       ]
     }
   ],
