performance metrics on base go_emotions model with emails text

--- a/EmotionAnalysis/TestRobertaModel/test_roberta_model.ipynb
+++ b/EmotionAnalysis/TestRobertaModel/test_roberta_model.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rezett/Tese/Thesis/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from transformers import pipeline\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -27,11 +36,11 @@
       "3      Be advised that we've identified an attempt to...\n",
       "4      Our security system has flagged your account f...\n",
       "                             ...                        \n",
-      "100     \"You've been selected for an exclusive chance...\n",
-      "101     \"including access from an unrecognized device...\n",
-      "102     \"To claim this unexpected gift, simply provid...\n",
-      "103     \"To redeem this special offer, please update ...\n",
-      "104     \"This is our way of saying thank you for your...\n",
+      "100    Congratulations! You've been selected for an e...\n",
+      "101    We've noticed some unusual activity on your ac...\n",
+      "102    Unexpected account activity alert: You've rece...\n",
+      "103    As a token of our appreciation for your contin...\n",
+      "104    After recent security breaches, we're offering...\n",
       "Name: text, Length: 105, dtype: object\n"
      ]
     }
@@ -49,22 +58,27 @@
     "print(df['text'])\n",
     "\n",
     "emails = df['text'].tolist()\n",
-    "labels = set(df['emotion'].tolist())"
+    "labels = set(df['emotion'].tolist())\n",
+    "\n",
+    "# Open the output file in write mode\n",
+    "with open('output.txt', 'w') as f:\n",
+    "    # Write all the texts (emails)\n",
+    "    for text in emails:\n",
+    "        f.write(text + '\\n')\n",
+    "\n",
+    "    # Write a separator to indicate the start of emotions\n",
+    "    f.write('\\n---EMOTIONS---\\n') \n",
+    "\n",
+    "    # Write all the unique emotions\n",
+    "    for label in labels:\n",
+    "        f.write(label + '\\n') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['neutral'], ['curiosity'], ['neutral'], ['caring'], ['neutral'], ['curiosity'], ['curiosity'], ['excitement'], ['curiosity'], ['surprise'], ['neutral'], ['excitement'], ['excitement'], ['excitement'], ['excitement'], ['confusion'], ['confusion'], ['confusion'], ['confusion'], ['confusion'], ['caring'], ['caring'], ['caring'], ['caring'], ['gratitude'], ['neutral'], ['caring'], ['neutral'], ['caring'], ['neutral'], ['curiosity'], ['neutral'], ['curiosity'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['confusion'], ['neutral'], ['confusion'], ['curiosity'], ['caring'], ['caring'], ['gratitude'], ['admiration'], ['neutral'], ['admiration'], ['admiration'], ['admiration'], ['admiration'], ['admiration'], ['annoyance'], ['disappointment'], ['disappointment'], ['disappointment'], ['annoyance'], ['gratitude'], ['confusion'], ['confusion'], ['gratitude'], ['confusion'], ['joy'], ['joy'], ['joy'], ['gratitude'], ['admiration'], ['sadness'], ['sadness'], ['disappointment'], ['sadness'], ['disappointment'], ['neutral'], ['neutral'], ['neutral'], ['excitement'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['excitement'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['joy'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['neutral'], ['gratitude'], ['gratitude']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Classify emotions\n",
     "results = []\n",
@@ -86,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -94,19 +108,22 @@
      "output_type": "stream",
      "text": [
       "Overall Metrics (macro):\n",
-      "Precision: 0.397\n",
-      "Recall: 0.324\n",
-      "F1-Score: 0.350\n"
+      "Accuracy: 0.371\n",
+      "Precision: 0.436\n",
+      "Recall: 0.345\n",
+      "F1-Score: 0.358\n"
      ]
     }
    ],
    "source": [
     "# Calculate precision, recall, F1-score using 'macro' average\n",
+    "accuracy = accuracy_score(true_labels, predicted_labels)\n",
     "precision = precision_score(true_labels, predicted_labels, average='macro', labels=pd.unique(true_labels), zero_division=0)\n",
     "recall = recall_score(true_labels, predicted_labels, average='macro', labels=pd.unique(true_labels), zero_division=0)\n",
     "f1 = f1_score(true_labels, predicted_labels, average='macro', labels=pd.unique(true_labels), zero_division=0)\n",
     "\n",
     "print(\"Overall Metrics (macro):\")\n",
+    "print(f\"Accuracy: {accuracy:.3f}\")\n",
     "print(f\"Precision: {precision:.3f}\")\n",
     "print(f\"Recall: {recall:.3f}\")\n",
     "print(f\"F1-Score: {f1:.3f}\")"
@@ -114,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -156,114 +173,114 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>fear</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>curiosity</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.714</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.588</td>\n",
+       "      <td>0.564</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>excitement</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.571</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>0.471</td>\n",
+       "      <td>0.434</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>confusion</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.667</td>\n",
+       "      <td>0.800</td>\n",
+       "      <td>0.795</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>caring</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.600</td>\n",
+       "      <td>0.600</td>\n",
+       "      <td>0.600</td>\n",
+       "      <td>0.558</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>admiration</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.556</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.714</td>\n",
+       "      <td>0.730</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>anger</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>joy</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>0.571</td>\n",
+       "      <td>0.623</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sadness</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>0.571</td>\n",
+       "      <td>0.623</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>desire</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>surprise</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.333</td>\n",
+       "      <td>0.200</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.230</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>embarrassment</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gratitude</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.333</td>\n",
+       "      <td>0.667</td>\n",
+       "      <td>0.444</td>\n",
+       "      <td>0.427</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>relief</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -271,22 +288,22 @@
        "</div>"
       ],
       "text/plain": [
-       "               precision  recall   f1  mcc  support\n",
-       "label                                              \n",
-       "fear                 0.0     0.0  0.0  0.0       15\n",
-       "curiosity            0.0     0.0  0.0  0.0       10\n",
-       "excitement           0.0     0.0  0.0  0.0       10\n",
-       "confusion            0.0     0.0  0.0  0.0       15\n",
-       "caring               0.0     0.0  0.0  0.0       10\n",
-       "admiration           0.0     0.0  0.0  0.0        5\n",
-       "anger                0.0     0.0  0.0  0.0        5\n",
-       "joy                  0.0     0.0  0.0  0.0        5\n",
-       "sadness              0.0     0.0  0.0  0.0        5\n",
-       "desire               0.0     0.0  0.0  0.0        6\n",
-       "surprise             0.0     0.0  0.0  0.0        5\n",
-       "embarrassment        0.0     0.0  0.0  0.0        2\n",
-       "gratitude            0.0     0.0  0.0  0.0        6\n",
-       "relief               0.0     0.0  0.0  0.0        6"
+       "               precision  recall     f1    mcc  support\n",
+       "label                                                  \n",
+       "fear               0.000   0.000  0.000  0.000       15\n",
+       "curiosity          0.714   0.500  0.588  0.564       10\n",
+       "excitement         0.571   0.400  0.471  0.434       10\n",
+       "confusion          1.000   0.667  0.800  0.795       15\n",
+       "caring             0.600   0.600  0.600  0.558       10\n",
+       "admiration         0.556   1.000  0.714  0.730        5\n",
+       "anger              0.000   0.000  0.000  0.000        5\n",
+       "joy                1.000   0.400  0.571  0.623        5\n",
+       "sadness            1.000   0.400  0.571  0.623        5\n",
+       "desire             0.000   0.000  0.000  0.000        6\n",
+       "surprise           0.333   0.200  0.250  0.230        5\n",
+       "embarrassment      0.000   0.000  0.000  0.000        2\n",
+       "gratitude          0.333   0.667  0.444  0.427        6\n",
+       "relief             0.000   0.000  0.000  0.000        6"
       ]
      },
      "metadata": {},
@@ -308,17 +325,17 @@
       "103        gratitude\n",
       "104           relief\n",
       "Name: emotion, Length: 105, dtype: object\n",
-      "0        ['neutral']\n",
-      "1      ['curiosity']\n",
-      "2        ['neutral']\n",
-      "3         ['caring']\n",
-      "4        ['neutral']\n",
-      "           ...      \n",
-      "100      ['neutral']\n",
-      "101      ['neutral']\n",
-      "102      ['neutral']\n",
-      "103    ['gratitude']\n",
-      "104    ['gratitude']\n",
+      "0        neutral\n",
+      "1      curiosity\n",
+      "2        neutral\n",
+      "3         caring\n",
+      "4        neutral\n",
+      "         ...    \n",
+      "100    gratitude\n",
+      "101      neutral\n",
+      "102     surprise\n",
+      "103    gratitude\n",
+      "104    gratitude\n",
       "Name: predicted_emotion, Length: 105, dtype: object\n"
      ]
     }
@@ -352,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +411,13 @@
     "### Interpretation of Results:\n",
     "- **High Variance:** The high variance in F1 scores between emotions suggests that the model is not yet robust enough to handle the range of emotions in your emails.\n",
     "- **Zero Scores:** The zero scores for certain emotions indicate that the model might not have learned features to identify these emotions, or these emotions are not represented similarly in email data as they are in Reddit data.\n",
-    "- **Matthews Correlation Coefficient (MCC):** The MCC is a balanced measure that can be used even if the classes are of very different sizes. Some labels with high MCC suggest that the model does have the capability to generalize, at least for certain emotions."
+    "- **Matthews Correlation Coefficient (MCC):** The MCC is a balanced measure that can be used even if the classes are of very different sizes. Some labels with high MCC suggest that the model does have the capability to generalize, at least for certain emotions.\n",
+    "\n",
+    "### Actions Based on the Results:\n",
+    "- **Imbalanced Data Handling:** The imbalance in the dataset could be a major issue. Techniques like resampling, synthetic data generation, or class weighting during training could help address this.\n",
+    "- **Expand Dataset:** Increasing the number of labeled examples, especially for emotions that the model is currently not recognizing at all, could provide more data for the model to learn from.\n",
+    "- **Model Complexity:** If the model is too simple, it might not capture the complexity of emotions in emails. Conversely, if it's too complex, it might overfit on the Reddit data and not generalize well.\n",
+    "- **Domain Adaptation:** Employ domain adaptation techniques to adjust the model to the email domain. This could involve fine-tuning the model with a representative set of email data."
    ]
   },
   {
