added new chapter with things already done

--- a/Thesis/matter.tex
+++ b/Thesis/matter.tex
@@ -377,8 +377,7 @@
 \include{chapter1}
 \include{chapter2}
 \include{chapter3}
-%\include{chapter3}
-%\include{chapter4}
+\include{chapter4}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % End of Thesis text 
