update some files and project directory

--- a/PhishingDetectionModel/EmotionAnalysis/TestRobertaModel/test_roberta_model.ipynb
+++ b/PhishingDetectionModel/EmotionAnalysis/TestRobertaModel/test_roberta_model.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rezett/Tese/Thesis/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from transformers import pipeline\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +41,7 @@
     "classifier = pipeline(task=\"text-classification\", model=\"SamLowe/roberta-base-go_emotions\")\n",
     "\n",
     "# Load email dataset from CSV\n",
-    "df = pd.read_csv(\"../active_learning_emotions.csv\", delimiter=';')\n",
+    "df = pd.read_csv(\"./100_emotion_emails.csv\", delimiter=';')\n",
     "\n",
     "# Optional: Drop rows where 'emotion' is NaN or empty\n",
     "df = df.dropna(subset=['emotion'])\n",
@@ -76,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
