--- a/PhishingDetectionModel/EmotionAnalysis/active_learning_emotion_roberta_model.ipynb
+++ b/PhishingDetectionModel/EmotionAnalysis/active_learning_emotion_roberta_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "3jMpL5iTPyYG"
       },
@@ -282,26 +282,26 @@
       "outputs": [],
       "source": [
         "def preprocess_data(x):\n",
-        "    # lowercase all\n",
-        "    # if lower:\n",
-        "    #     x = x.lower()\n",
+        "    lowercase all\n",
+        "    if lower:\n",
+        "        x = x.lower()\n",
         "    \n",
         "    x = re.sub(r'http\\S+', '', x)               # remove URLs\n",
         "    x = x.replace('$$$', '$$ $')                # separate triple dollars\n",
         "    x = x.replace('\\n', ' ')                    # remove new lines\n",
-        "    # x = re.sub(equation_pattern, '', x)         # remove math expressions\n",
-        "    # x = re.sub(asymptote_pattern, '', x)        # remove asymptote\n",
+        "    x = re.sub(equation_pattern, '', x)         # remove math expressions\n",
+        "    x = re.sub(asymptote_pattern, '', x)        # remove asymptote\n",
         "    \n",
         "    # remove erroneous LaTeX syntax and stopwords\n",
         "    x = x.replace('\\\\', ' \\\\')\n",
-        "    # temp = []\n",
-        "    # for word in x.split():\n",
-        "    #     if not word.startswith('\\\\') and not word in stopwords:\n",
-        "    #         temp.append(word)\n",
-        "    # x = ' '.join(temp)\n",
+        "    temp = []\n",
+        "    for word in x.split():\n",
+        "        if not word.startswith('\\\\') and not word in stopwords:\n",
+        "            temp.append(word)\n",
+        "    x = ' '.join(temp)\n",
         "    \n",
         "    x = re.sub(r'([-;.,!?<=>])', r' \\1 ', x)    # separate filters from words\n",
-        "    #x = re.sub('[^A-Za-z0-9]+', ' ', x)         # remove non-alphanumeric chars\n",
+        "    x = re.sub('[^A-Za-z0-9]+', ' ', x)         # remove non-alphanumeric chars\n",
         "    \n",
         "    # stemming\n",
         "    # if stem:\n",
@@ -943,7 +943,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
